# doc-builder

./: .gitignore  GEMINI.md  Makefile  README.md  gemini.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
generated_reports/: Study2_report.docx
generated_reports/Study2_report/: [Content_Types].xml
generated_reports/Study2_report/docProps/: core.xml
generated_reports/Study2_report/word/: document.xml
generated_reports/Study2_report/word/_rels/: document.xml.rels
inspiration/: Iterate2.py
src/: document_generator.py  plotting.py  statistics.py
templates/: report_template.docx  report_template2.docx
test_simple_report/Study2/: abstract.md  data.csv  discussion.md  interpretation.md  report.json
test_simple_report/output/: Study2_report.docx
tests/: test_generator.py
tests/data/Study1/: abstract.md  report_template.docx  ~$port_template.docx
tests/data/Study2/: conclusion.md
tests/data/Study3/: data.csv  introduction.md  report.json
tests/expected_output/: Study1_report.docx  Study2_report.docx  Study3_report.docx
tests/tmp/test_project/generated_reports/: Study1_report.docx  Study2_report.docx
tests/tmp/test_project/studies/Study1/: conclusion.md  data.csv  discussion.md  interpretation.md  introduction.md  report.json
tests/tmp/test_project/studies/Study2/: introduction.md  report.json
tests/tmp/test_project/templates/: report_template.docx
